@@ -1,6 +1,6 @@
 Package: network
 Version: 1.11.1
-Date: 2014-07-08
+Date: 2014-08-14
 Title:  Classes for Relational Data
 Authors@R:c(
     person("Carter T.", "Butts", role=c("aut","cre"), email="buttsc@uci.edu"),
