@@ -1,5 +1,7 @@
 CHANGELOG:
 v1.11 Fixes & Features
+   - network now includes an explicit list of exported functions in NAMESPACE
+   - the following 'internal' functions have been removed from NAMESPACE: networkOperatorSetup, switchArcDirection, readAndVectorizeLine, read.paj.simplify
    - network now follows R conventions for exporting some of its C-level API functions for use by other packages
    - get.inducedSubgraph() now has an optional 'eid' argument for inducing a network including specified edges and their incident vertices
    - fixed bug in as.network.matrix that caused it to ignore the na.rm argument.
